services/kubernetes/clusters/cluster-a/apps/homepage/ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homepage-ingressroute
  namespace: homepage
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`homepage.hikarimoon.pro`) && PathPrefix(`/`)
      kind: Rule
      middlewares:
        - name: secure-headers
        - name: rate-limit
      services:
        - name: homepage-service
          port: 3000
